--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,9 @@
+
 {
-    "rewrites": [{ "source": "/(.*)", "destination": "/" }]
-}
+    "build": {
+      "env": {
+        "NEXT_PUBLIC_API_URL": "https://api.example.com"
+      }
+    }
+  }
+  
